refactor: sacar logs como constantes y hardcodearlos
complicaba de manera innecesaria el proyecto
